WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258259
REGRESSION(
264714@main
) 5% regression in Speedometer 3's Editor-TipTap suite
https://bugs.webkit.org/show_bug.cgi?id=258259
Summary
REGRESSION(264714@main) 5% regression in Speedometer 3's Editor-TipTap suite
Myles C. Maxfield
Reported
2023-06-17 19:26:08 PDT
REGRESSION(
264714@main
) 5% regression in Speedometer 3's Editor-TipTap suite
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2023-06-17 19:26:13 PDT
<
rdar://problem/110926113
>
Myles C. Maxfield
Comment 2
2023-06-17 19:28:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15078
EWS
Comment 3
2023-06-17 20:25:02 PDT
Committed
265280@main
(34f838120c47): <
https://commits.webkit.org/265280@main
> Reviewed commits have been landed. Closing PR #15078 and removing active labels.
EWS
Comment 4
2023-06-21 09:36:24 PDT
Committed
265364@main
(0b5f8c1635d9): <
https://commits.webkit.org/265364@main
> Reviewed commits have been landed. Closing PR #15148 and removing active labels.
Myles C. Maxfield
Comment 5
2023-06-21 18:03:02 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/15171
EWS
Comment 6
2023-06-21 19:57:30 PDT
Committed
265389@main
(cef67a157941): <
https://commits.webkit.org/265389@main
> Reviewed commits have been landed. Closing PR #15171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug