REGRESSION(264714@main) 5% regression in Speedometer 3's Editor-TipTap suite https://bugs.webkit.org/show_bug.cgi?id=258259 rdar://110926113

Reviewed by Ryosuke Niwa.

There's no need to use the fancy NSString subclass if there is no prior context.
The whole reason the NSString subclass exists is to deal with the prior context.
If we can use CFString directly, that's faster.

* Source/WTF/wtf/text/cf/TextBreakIteratorCFCharacterCluster.h:
(WTF::TextBreakIteratorCFCharacterCluster::setText):
* Source/WTF/wtf/text/cf/TextBreakIteratorCFStringTokenizer.h:
(WTF::TextBreakIteratorCFStringTokenizer::TextBreakIteratorCFStringTokenizer):
(WTF::TextBreakIteratorCFStringTokenizer::setText):
(WTF::TextBreakIteratorCFStringTokenizer::createString):

Canonical link: https://commits.webkit.org/265280@main