Source/WTF/wtf/text/cf/TextBreakIteratorCFCharacterCluster.h
@@ -57,7 +57,10 @@ public:
 
     void setText(StringView string, StringView priorContext)
     {
-        m_string = createContextualizedCFString(string, priorContext);
+        if (priorContext.empty())
+            m_string = string.createCFStringWithoutCopying();
+        else
+            m_string = createContextualizedCFString(string, priorContext);
         m_stringLength = string.length();
         m_priorContextLength = priorContext.length();
     }
